--- a/css/render.css
+++ b/css/render.css
@@ -55,3 +55,14 @@ div.tooltip {
 
 }
 
+#bubbleHeading{
+    font-size: 18px;
+    margin-left:150px;
+    fill: #08306b;
+    font-weight: bold;
+    padding-bottom: 40px;
+
+}
+
+
+
